<resources>
    <string name="app_name">BetYou</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_recovery">RecoveryActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="email_hint">Tu Email</string>
    <string name="pass_hint">Tu Contraseña</string>
    <string name="new_pass_hint">Tu nueva Contraseña</string>
    <string name="btn_recovery">¿Te olvidaste?</string>
    <string name="pass_hint_confirm">Confirma tu Contraseña</string>
    <string name="btn_recovery_action">Recuperar</string>

    <string name="request_login_ok">Login => OK</string>
    <string name="request_register_ok">Registro de Usuario => OK</string>
    <string name="user_name"></string>
    <string name="user_subtitle"></string>
    <string name="user_budget"></string>

    <string name="error_empty_data">Requerido</string>
    <string name="error_pass_equals">Contraseña Deben ser Iguales</string>
    <string name="error_form_data">No se ha podido completar</string>
    <string name="error_empty_list_required">Necesitamos algún contacto</string>
    <string name="request_register_ko">Error en Registro, revise los datos</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="content_desc_menu_home">Principal</string>
    <string name="content_desc_menu_calendar">Calendario</string>
    <string name="content_desc_menu_bet">Nueva Apuesta</string>
    <string name="content_desc_menu_money">Listado Apuestas</string>
    <string name="content_desc_menu_settings">Configuración</string>
    <string name="settings_profile_title">Tus Datos</string>
    <string name="settings_name_edt">Tu Nombre (Publico)</string>
    <string name="settings_paypal_edt">Tu Paypal</string>
    <string name="settings_notifications_label">Recibir Notificaciones</string>
    <string name="save_btn">Guardar</string>
    <string name="pass_change_btn">Cambiar Contraseña</string>
    <string name="settings_password_title">Cambiar Contraseña</string>
    <string name="error_not_loged">Debe estar Logeado</string>
    <string name="error_not_valid_pass">Contraseña Incorrecta</string>
    <string name="request_pass_changed">Contraseña Cambiada</string>
    <string name="request_save_profile_ok">Perfil Guardado</string>
    <string name="error_profile_not_exist">No existe el perfil</string>
    <string name="frg_bet_title">Nueva Apuesta</string>
    <string name="frg_bet_desc_hint">¿Que Apuestas?</string>
    <string name="frg_bet_name_hint">Titulo</string>
    <string name="frg_bet_create_btn">Crear Apuesta</string>
    <string name="frg_bet_create_title">¿Cuanto Apuestas?</string>

    <string name="bet_create_money_hint">El valor será considerado en Euro (€)</string>
    <string name="bet_create_who_title">¿Con Quien?</string>
    <string name="error_permision_not_granted">Son necesarios permisos para continuar</string>
    <string name="error_cursor_data_null">No se han recuperado los datos</string>
    <string name="act_bet_create_filter_placeholder">Buscar...</string>
    <string name="act_bet_create_btn_label">Apostar</string>
    <string name="save_betitem_ok">Apuesta Creada</string>
    <string name="default_bet_price">100</string>
    <string name="btn_logout">LogOut</string>
    <string name="request_recovery_ok">Enviado Mensaje de Recuperación</string>
    <string name="tab_owner">Tus Apuestas</string>
    <string name="tab_involved">Te Apostaron</string>
    <string name="select_picture">Elige la Imagen</string>
    <string name="mensaje_volumen">Cambió el volumen</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preferences_notifications">Notificaciones</string>
    <string name="preferences_notifications_title">Mostrar Notificaciones</string>
    <string name="preferences_notifications_subtitle">Activar o Desactivar las notificaciones de toda la aplicación</string>
</resources>