<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/preferences_notifications_title"
            app:summary="@string/preferences_notifications_subtitle"
            app:defaultValue="@bool/preferences_notifications_default"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/preferences_hours_labels"
            android:entryValues="@array/preferences_hours_values"
            android:key="list_preference_1"
            android:title="List preference" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:defaultValue="Hola"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:summary="Ni Idea, Tio"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title"
            app:switchTextOn="Encendido"
            app:switchTextOff="Apagado"/>


        <SwitchPreferenceCompat
            app:dependency="sync"
            app:icon="@drawable/ic_plus"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>