<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".auth.RegisterFragment">

    <EditText
        android:id="@+id/frg_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:autofillHints="email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/frg_register_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/frg_register_passconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/pass_hint_confirm"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/frg_register_register"
            style="@style/BtnAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:padding="6dp"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/frg_register_login"
            style="@style/BtnSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="50"
            android:padding="6dp"
            android:text="@string/btn_login" />
    </LinearLayout>

    <Button
        android:id="@+id/frg_register_recovery"
        style="@style/BtnLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_recovery" />

</LinearLayout>