<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/frg_bet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/frg_bet_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/frg_bet_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/frg_bet_desc_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/frg_bet_desc_hint"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2" />

        <CalendarView
            android:id="@+id/frg_bet_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="1" />

        <Button
            android:id="@+id/frg_bet_action_btn"
            style="@style/BtnAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frg_bet_create_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>